# django-homeworks

./: README.md  manage.py  pyproject.toml
apps/: settings.py  urls.py
apps/common/: apps.py  constants.py
apps/common/management/commands/: resetapptables.py
apps/common/templates/common/: index.html  menu.html
apps/django/hw1/: views.py
apps/django/hw2/migrations/: 0001_initial.py
apps/django/hw3/migrations/: 0001_initial.py
apps/django/hw4/migrations/: 0001_initial.py
apps/django/hw5/migrations/: 0001_initial.py
apps/django/hw6/migrations/: 0001_initial.py
apps/django_for_apis/books/: apps.py  books.json  models.py  tests.py  urls.py  views.py
apps/django_for_apis/books/migrations/: 0001_initial.py
apps/django_for_apis/books/templates/books/: books.html
apps/fspy/hw1/: apps.py  views.py
apps/fspy/hw1/templates/hw1/: current_time.html  workdir.html
apps/fspy/hw2/: apps.py  views.py
apps/fspy/hw2/migrations/: 0001_initial.py
apps/fspy/hw2/templates/hw2/: recipe.html  (+1 more)
apps/fspy/hw3/: apps.py  views.py
apps/fspy/hw3/migrations/: 0001_initial.py
apps/fspy/hw4/: apps.py  views.py
apps/fspy/hw4/migrations/: 0001_initial.py
apps/fspy/hw5/: apps.py  views.py
apps/fspy/hw5/migrations/: 0001_initial.py
apps/fspy/hw6/: apps.py  serializers.py  views.py
apps/fspy/hw6/migrations/: 0001_initial.py
apps/html-css/hw9/: apps.py  urls.py  views.py
apps/menu/: apps.py  urls.py  views.py
apps/menu/templates/menu/: menu.html
django_hw/: asgi.py  settings.py  wsgi.py
templates/: base.html
templates/rest_framework/: api.html
(+11 files in other folders)
