[project]
name = "django-hw"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-debug-toolbar>=6.1.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djlint>=1.36.4",
    "faker>=40.0.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
]
